--- a/src/components/Badges/elements/BadgeEditor/BadgeEditor.module.scss
+++ b/src/components/Badges/elements/BadgeEditor/BadgeEditor.module.scss
@@ -1,8 +1,10 @@
+@import 'styles/variables';
+
 .button {
   background-color: transparent !important;
   color: var(--contrast) !important;
 
-  @media (max-width: 550px) {
+  @media (max-width: $screen-sm) {
     display: none !important;
   }
 
