--- a/src/components/Calculator/elements/Modifier/Modifier.module.scss
+++ b/src/components/Calculator/elements/Modifier/Modifier.module.scss
@@ -5,10 +5,10 @@
   align-items: center;
   margin: 0 auto;
   width: 100%;
-  gap: 8px;
+  gap: var(--spacing-2);
 
   > span:first-child {
-    margin-right: 8px;
+    margin-right: var(--spacing-2);
     user-select: none;
   }
 
@@ -17,13 +17,12 @@
   }
 
   > output {
+    min-width: 2.143rem;
+    padding: var(--spacing-2);
     font-weight: bold;
     border: 1px solid var(--contrast);
     border-radius: 4px;
-    padding: 1px 3px;
     text-align: center;
-    padding: 4px 8px;
-    min-width: 30px;
     user-select: none;
   }
 }
