--- a/src/components/Pokestats/elements/Tip/Tip.module.scss
+++ b/src/components/Pokestats/elements/Tip/Tip.module.scss
@@ -1,6 +1,6 @@
 .container {
   width: 100%;
-  padding: 8px;
+  padding: var(--spacing-2);
   background-color: var(--bgsecondary);
   border-radius: 4px;
 
