--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,10 +1,5 @@
-@import 'styles/mixins';
-
-/* Responsive Variables */
-$break1: '(max-width:35.643rem)';
-$break2: '(min-width:35.714rem) and (max-width:71.714rem)';
-$break2open: '(min-width:35.714rem)';
-$break3: '(min-width:71.786rem)';
+@use 'styles/mixins';
+@import 'styles/variables';
 
 .app {
   height: fit-content;
@@ -16,14 +11,14 @@ $break3: '(min-width:71.786rem)';
     margin: 0 auto !important;
     color: var(--contrast);
 
-    @media (max-width: 1200px) {
+    @media (max-width: $screen-lg) {
       margin-left: var(--spacing-7) !important;
       margin-right: unset !important;
     }
-    @media (max-width: 850px) {
+    @media (max-width: 53.125rem) {
       margin-left: var(--spacing-4) !important;
     }
-    @media (max-width: 750px) {
+    @media (max-width: $screen-md) {
       > h1 {
         display: none;
       }
@@ -31,7 +26,7 @@ $break3: '(min-width:71.786rem)';
   }
 
   .gameSelect {
-    @include semantic-icon;
+    @include mixins.semantic-icon;
     width: 100%;
     max-width: var(--screen-xxs);
     background-color: transparent !important;
@@ -53,8 +48,8 @@ $break3: '(min-width:71.786rem)';
 
     &.darkmode,
     &.delete {
-      @media (max-width: 550px) {
-        padding: 5px !important;
+      @media (max-width: $screen-sm) {
+        padding: var(--spacing-1) !important;
       }
     }
   }
@@ -63,8 +58,8 @@ $break3: '(min-width:71.786rem)';
     background-color: var(--header);
     color: var(--contrast);
     border-style: none;
-    padding-left: 15px;
-    padding-right: 15px;
+    padding-left: var(--spacing-4);
+    padding-right: var(--spacing-4);
     position: relative;
     cursor: pointer;
   }
@@ -74,25 +69,25 @@ $break3: '(min-width:71.786rem)';
     place-items: center;
     order: 1;
     position: absolute;
-    bottom: 5px;
-    right: 5px;
-    width: 14px;
-    height: 14px;
+    bottom: var(--spacing-1);
+    right: var(--spacing-1);
+    width: var(--spacing-4);
+    height: var(--spacing-4);
     background-color: red;
     font-weight: bold;
     color: #ffffff;
-    font-size: 9px;
+    font-size: var(--font-size-1);
     border-radius: 50%;
   }
 
   .grid {
     display: grid;
-    max-width: 1200px;
-    column-gap: 30px;
+    max-width: var(--screen-lg);
+    column-gap: var(--spacing-8);
     margin: 0 auto;
 
     .mainContent {
-      padding: 10px 0;
+      padding: var(--spacing-3) 0;
       height: calc(100vh - 40px);
       background-color: var(--bgsecondary);
     }
@@ -100,8 +95,8 @@ $break3: '(min-width:71.786rem)';
     .nav {
       display: flex;
       flex-flow: column nowrap;
-      padding: 50px 10px 0 10px;
-      gap: 45px;
+      padding: var(--spacing-10) var(--spacing-3) 0 var(--spacing-3);
+      gap: var(--spacing-9);
 
       .activeLink {
         color: var(--badge);
@@ -109,7 +104,7 @@ $break3: '(min-width:71.786rem)';
 
       > a {
         font-weight: bold;
-        font-size: 24px;
+        font-size: var(--font-size-7);
         color: var(--contrast);
 
         &:hover {
@@ -124,7 +119,7 @@ $break3: '(min-width:71.786rem)';
       }
     }
     @media #{$break3} {
-      grid-template-columns: auto minmax(auto, 1200px);
+      grid-template-columns: auto minmax(auto, var(--screen-lg));
     }
   }
 }
