--- a/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
+++ b/src/components/Badges/elements/BadgeDetail/BadgeDetail.module.scss
@@ -1,13 +1,13 @@
 .title {
   font-weight: bold;
-  font-size: 24px;
+  font-size: var(--font-size-6);
   color: var(--contrast);
 }
 
 .rematch {
   display: flex;
-  gap: 10px;
-  margin-bottom: 5px;
+  gap: var(--spacing-3);
+  margin-bottom: var(--spacing-1);
 
   :global(.ui.radio.checkbox > label) {
     color: var(--contrast);
@@ -17,37 +17,37 @@
 .gymPokemon {
   display: flex;
   flex-flow: column nowrap;
-  gap: 10px;
+  gap: var(--spacing-3);
   overflow: auto;
 
   .pokemon {
     display: flex;
     flex-flow: column nowrap;
-    border-radius: 6px;
-    gap: 5px;
-    padding: 3px;
+    border-radius: 4px;
+    gap: var(--spacing-2);
+    padding: var(--spacing-2);
 
     .pokemonHeader {
       display: flex;
       align-items: center;
       justify-content: space-evenly;
-      gap: 25px;
+      gap: var(--spacing-7);
 
       .pokemonName {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        gap: 5px;
+        gap: var(--spacing-2);
         color: var(--contrast);
 
         > img {
-          height: 60px;
-          width: 60px;
+          height: 4.286rem;
+          width: 4.286rem;
           object-fit: cover;
         }
 
         > span {
-          font-size: 16px;
+          font-size: var(--font-size-4);
         }
 
         .totem {
@@ -59,33 +59,22 @@
       .pokemonDetails {
         display: flex;
         flex-flow: column nowrap;
-        gap: 5px;
+        gap: var(--spacing-2);
       }
 
       .pokemonLabel {
         display: flex;
         flex-flow: column nowrap;
         align-items: center;
-        gap: 3px;
+        gap: var(--spacing-1);
         color: var(--contrast);
 
         > span {
-          font-size: 12px;
-        }
-
-        .types {
-          display: flex;
-          gap: 5px;
-
-          > span {
-            padding: 2.5px 4px;
-            border-radius: 3px;
-            color: #ffffff;
-          }
+          font-size: var(--font-size-2);
         }
 
         .value {
-          font-size: 14px;
+          font-size: var(--font-size-3);
         }
       }
     }
