--- a/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
+++ b/src/components/Calculator/elements/CalculatorHeader/CalculatorHeader.module.scss
@@ -4,25 +4,25 @@
   grid-column: 1 / -1;
   align-items: center;
   width: 100%;
-  padding: 8px;
+  padding: var(--spacing-2);
   background-color: var(--card);
   border-radius: 4px;
 
   .options {
     grid-column: 1 / -1;
     display: flex;
-    gap: 8px;
-    margin: 0 0 10px auto;
+    gap: var(--spacing-2);
+    margin: 0 0 var(--spacing-3) auto;
 
     .button > i {
-      margin-left: 6px !important;
+      margin-left: var(--spacing-2) !important;
       margin-right: 0 !important;
     }
 
     .genSelector {
       width: 100%;
-      min-width: 130px !important;
-      max-width: 130px;
+      min-width: 9.286rem !important;
+      max-width: 9.286rem;
       background-color: transparent !important;
       color: var(--contrast) !important;
 
@@ -51,7 +51,7 @@
     }
 
     > i {
-      font-size: 24px;
+      font-size: var(--font-size-7);
       justify-self: flex-end;
       transition: transform 150ms ease;
       cursor: pointer;
@@ -62,11 +62,11 @@
     grid-column: 1 /-1;
     display: flex;
     flex-flow: column nowrap;
-    padding: 0 8px;
-    margin-top: 10px;
-    gap: 8px;
+    padding: 0 var(--spacing-2);
+    margin-top: var(--spacing-3);
+    gap: var(--spacing-2);
     width: 100%;
-    height: 0px;
+    height: 0;
     clip-path: inset(0);
     color: var(--contrast);
 
@@ -78,7 +78,7 @@
     .grouped {
       display: flex;
       flex-flow: column nowrap;
-      gap: 4px;
+      gap: var(--spacing-1);
 
       > div {
         cursor: pointer;
