--- a/src/components/Effectiveness/Effectiveness.module.scss
+++ b/src/components/Effectiveness/Effectiveness.module.scss
@@ -1,5 +1,7 @@
+@import 'styles/variables';
+
 .content {
-  @media (max-width: 550px) {
+  @media (max-width: $screen-sm) {
     min-height: 76vh;
     max-height: 76vh;
   }
@@ -9,18 +11,18 @@
   > h3 {
     display: grid;
     place-items: center;
-    margin-bottom: 10px;
+    margin-bottom: var(--spacing-3);
   }
 
   .container {
     display: flex;
     flex-flow: column nowrap;
-    gap: 10px;
+    gap: var(--spacing-3);
 
     .list {
       display: flex;
       flex-flow: row wrap;
-      gap: 7px;
+      gap: var(--spacing-2);
     }
   }
 
