--- a/src/components/PokeInfo/PokeInfo.module.scss
+++ b/src/components/PokeInfo/PokeInfo.module.scss
@@ -1,11 +1,13 @@
+@import 'styles/variables';
+
 .container {
   display: flex;
   flex-flow: column wrap;
 
   > span {
-    @media (max-width: 550px) {
-      max-width: 125px;
+    @media (max-width: $screen-sm) {
+      max-width: 8.929rem;
     }
-    max-width: 225px;
+    max-width: 16.071rem;
   }
 }
