--- a/src/components/Pokestats/Pokestats.module.scss
+++ b/src/components/Pokestats/Pokestats.module.scss
@@ -11,28 +11,28 @@
   }
 
   .fainted {
-    width: 26px;
-    height: 26px;
-    margin-right: 5px;
+    width: 1.857rem;
+    height: 1.857rem;
+    margin-right: var(--spacing-1);
   }
 
   .team {
-    width: 22px;
-    height: 22px;
-    margin-right: 5px;
+    width: 1.571rem;
+    height: 1.571rem;
+    margin-right: var(--spacing-1);
   }
 
   .tabs {
     display: flex;
     flex-flow: column nowrap;
     height: 100%;
-    width: calc(100% - 5px);
+    width: calc(100% - var(--spacing-1));
 
     :global(.ui.secondary.menu) {
       display: flex;
       flex-flow: row nowrap;
       overflow: auto;
-      padding: 1px 8px;
+      padding: var(--spacing-0) var(--spacing-2);
     }
     :global(.ui.secondary.menu .active) {
       background-color: var(--card);
@@ -69,7 +69,7 @@
     &.team {
       display: flex;
       flex-flow: column nowrap;
-      gap: 15px;
+      gap: var(--spacing-4);
       position: relative;
       width: 100%;
       background-color: #899928;
@@ -78,8 +78,8 @@
         display: flex;
         align-items: center;
         position: relative;
-        gap: 15px;
-        height: 88px;
+        gap: var(--spacing-4);
+        height: 6.286rem;
         background-color: #3790d9;
         border-top-left-radius: 37px;
         border-bottom-left-radius: 37px;
@@ -87,7 +87,7 @@
 
         .pokeball {
           z-index: 1;
-          margin-left: -2px;
+          margin-left: calc(-1 * var(--spacing-0));
           position: relative;
           border-radius: 50%;
           border: 5px solid #333;
@@ -99,7 +99,7 @@
           .center {
             position: absolute;
             top: 48%;
-            height: 10px;
+            height: 0.714rem;
             width: 100%;
             background-color: #333;
             z-index: 1;
@@ -119,26 +119,26 @@
           position: absolute;
           top: 70%;
           background-color: #80c0d6;
-          height: 4px;
-          width: calc(100% - 5px);
-          margin-left: 5px;
+          height: 0.286rem;
+          width: calc(100% - 0.357rem);
+          margin-left: 0.357rem;
         }
 
         .lineTwo {
           position: absolute;
           top: 80%;
           background-color: #80c0d6;
-          height: 13px;
-          width: calc(100% - 20px);
-          margin-left: 20px;
+          height: 0.929rem;
+          width: calc(100% - 1.429rem);
+          margin-left: 1.429rem;
         }
       }
     }
 
     .pokemon {
-      height: 72px;
-      width: 72px;
-      margin: 5px;
+      height: 5.143rem;
+      width: 5.143rem;
+      margin: 0.357rem;
       object-fit: contain;
       cursor: pointer;
       position: relative;
