--- a/src/components/Rules/elements/RuleContent/RuleContent.module.scss
+++ b/src/components/Rules/elements/RuleContent/RuleContent.module.scss
@@ -1,26 +1,26 @@
 .content {
   display: flex;
   flex-flow: column nowrap;
-  gap: 5px;
+  gap: var(--spacing-2);
 
   .smart {
-    font-size: 16px;
+    font-size: var(--font-size-4);
     > b {
       color: var(--badge);
     }
     > em {
-      font-size: 12px;
+      font-size: var(--font-size-2);
     }
   }
 
   .description {
     display: flex;
     flex-flow: row nowrap;
-    gap: 10px;
+    gap: var(--spacing-3);
 
     .number {
       font-weight: bold;
-      font-size: 24px;
+      font-size: var(--font-size-6);
     }
   }
 }
