--- a/src/components/Status/Status.module.scss
+++ b/src/components/Status/Status.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables';
+
 .statusSelect {
   width: 100%;
   background-color: transparent !important;
@@ -12,8 +14,8 @@
     top: 0 !important;
   }
 
-  @media (max-width: 550px) {
-    font-size: 12px;
+  @media (max-width: $screen-sm) {
+    font-size: var(--font-size-2);
   }
 }
 
@@ -23,6 +25,6 @@
   font-weight: bold;
 
   .innerLabel {
-    min-width: 72px;
+    min-width: 5.143rem;
   }
 }
