--- a/src/components/Tracker/Tracker.module.scss
+++ b/src/components/Tracker/Tracker.module.scss
@@ -10,12 +10,12 @@
   .container {
     display: flex;
     flex-flow: column nowrap;
-    gap: 8px;
-    width: calc(100% - 10px);
-    height: calc(100% - 10px);
+    gap: var(--spacing-2);
+    width: calc(100% - var(--spacing-3));
+    height: calc(100% - var(--spacing-3));
     min-height: 0;
-    padding: 5px;
+    padding: var(--spacing-1);
     transition: all 500ms;
-    border-radius: 3px;
+    border-radius: 4px;
   }
 }
